todo 1- Add Order Logic